--- a/src/main/resources/assets/biolock/lang/en_US.lang
+++ b/src/main/resources/assets/biolock/lang/en_US.lang
@@ -1,3 +1,3 @@
 tile.biolock.biolock.name=Biometric Lock
 tile.biolock.prb.name=PRB
-tile.biolock.keypadlock.name=Keypad Lock
+tile.biolock.keypadLock.name=Keypad Lock
